fix: blog truncate

--- a/kairos-docs/blog/2023-01-27-release-v1.5.md
+++ b/kairos-docs/blog/2023-01-27-release-v1.5.md
@@ -15,7 +15,11 @@ title: Kairos release v1.5
 <br />
 </h1>
 
+
+
 We are thrilled to announce the release of Kairos version 1.5, a major update that brings significant improvements to user experience and security. With this release, we have made it even easier for you to install and set up Kairos, as well as better protect your user data. Our community has been an invaluable source of feedback, bug reports, and contributions, and we are grateful for their support.
+
+<!--truncate-->
 
 You can find Kairos core images at https://github.com/kairos-io/kairos/releases/tag/v1.5.0 and images with k3s pre-bundled here: https://github.com/kairos-io/provider-kairos/releases/tag/v1.5.1. 
 
