--- a/kairos-docs/blog/2023-04-13-release-v2.0.md
+++ b/kairos-docs/blog/2023-04-13-release-v2.0.md
@@ -15,7 +15,12 @@ title: Kairos release v2.0
 <br />
 </h1>
 
+
+
 Kairos is a cloud-native meta-Linux distribution that brings the power of public cloud to your on-premises environment. With Kairos, you can build your own cloud with complete control and no vendor lock-in. It allows you to easily spin up a Kubernetes cluster with the Linux distribution of your choice, and manage the entire cluster lifecycle with Kubernetes.
+
+<!--truncate-->
+
 
 #### Why you should try Kairos:
 Kairos provides a wide range of use cases, from Kubernetes applications to appliances and more. You can provision nodes with your own image or use Kairos releases for added flexibility. Kairos also simplifies day-2 operations like node upgrades. It provides the benefits of a unified, cloud-native approach to OS management.
