--- a/kairos-docs/blog/2023-07-10-release-v2.3.md
+++ b/kairos-docs/blog/2023-07-10-release-v2.3.md
@@ -15,7 +15,12 @@ title: Unveiling Kairos v2.3 - FIPS Compliance and More!
 <br />
 </h1>
 
+
+
 We're excited to roll out Kairos v2.3, the latest iteration of our project, packed with new features and enhancements. The most notable change in this version is the support for Federal Information Processing Standards (FIPS).
+
+<!--truncate-->
+
 
 FIPS, a set of standards governing document processing, encryption algorithms, and other IT standards for non-military government agencies and contractors, is now an integral part of Kairos. The addition of a FIPS generic and Ubuntu-specific framework image marks a significant milestone in our journey to offer a secure and reliable Linux distribution. We made sure to included examples to facilitate building FIPS from scratch on Ubuntu, Fedora, and RockyLinux.
 
