--- a/kairos-docs/blog/2023-09-19-release-v2.4.md
+++ b/kairos-docs/blog/2023-09-19-release-v2.4.md
@@ -15,7 +15,12 @@ title: Kairos release v2.4
 <br />
 </h1>
 
+
+
 We're thrilled to announce the release of version 2.4.0 of Kairos which brings a wealth of exciting improvements and essential bug fixes that we can't wait to share with you.
+
+<!--truncate-->
+
 
 ## Enhanced Release Artifacts Naming
 
