--- a/kairos-docs/blog/2023-11-14-release-v2.4.2.md
+++ b/kairos-docs/blog/2023-11-14-release-v2.4.2.md
@@ -15,10 +15,15 @@ title: Kairos release v2.4.2
 <br />
 </h1>
 
+
+
 Did you ever look at a release and couldn't decide if it should be a patch, a minor or a major version bump? It has happened to everybody (if not, let me know).
 This Kairos release was a similar case. We didn't introduce any breaking changes and it was just bug fixes, which makes it a patch release.  At least that's the story for user facing changes. Because, behind the scenes, we made some heavy changes, in the way we produce the Kairos artifacts and how we name them.
 
 The detailed list of changes can be found in the [release notes](https://github.com/kairos-io/kairos/releases/tag/v2.4.2) but the most important things to notice are listed below.
+
+<!--truncate-->
+
 
 ## New artifact names
 
