--- a/kairos-docs/blog/2024-01-11-release-v2.5.md
+++ b/kairos-docs/blog/2024-01-11-release-v2.5.md
@@ -16,12 +16,17 @@ title: Kairos release v2.5
 </h1>
 
 
+
+
 Happy new year to all of you in the Kairos community! This 2024, we have many great plans that we want to achieve. You can find more about them in our [roadmap](https://github.com/orgs/kairos-io/projects/2/views/1).
 
 We start the year with the release of Kairos v2.5.0. This time, we focused on the ground work for two major features that will land later in the year
 
 1. **Improving the Kairos Factory user experience**: On previous releases we shared how our artifact names have changed to make it easier to distinguish between them. In this release we worked on Versioneer, a component that helps build such names in more sofisticated ways than the original script did. This has been aggregated to the `kairos-agent upgrade` command to help you filter through upgradable versions.
 2. **Adding support for UKI (Unified Kernel Images)**: This is still a WIP but we already have a proof of concept, meaning that Kairos will increase its security level by validating signatures using the EFI bootloader.
+
+<!--truncate-->
+
 
 ## Known Issues
 
