--- a/kairos-docs/blog/2024-03-08-release-v3.md
+++ b/kairos-docs/blog/2024-03-08-release-v3.md
@@ -15,7 +15,12 @@ title: Kairos release v3
 <br />
 </h1>
 
+
+
 The team is very excited to announce the next major release of Kairos, Kairos v3! This release marks a major milestone in our [roadmap](https://github.com/orgs/kairos-io/projects/2/views/1) by adding support for Unified Kernel Images (UKI). This will enhance the level of security that you can achieve on your system with the help of Trusted Boot.
+
+<!--truncate-->
+
 
 ## Trusted Boot
 
