--- a/kairos-docs/blog/2024-07-11-release-v3.1.md
+++ b/kairos-docs/blog/2024-07-11-release-v3.1.md
@@ -15,7 +15,12 @@ title: Kairos release v3.1
 <br />
 </h1>
 
+
+
 We are thrilled to announce the release of Kairos v3.1.0! This update brings a host of significant enhancements to further secure and streamline your edge computing environment.
+
+<!--truncate-->
+
 
 ## Key Features and Updates
 
