--- a/kairos-docs/blog/2025-04-24-release-v3.4.0.md
+++ b/kairos-docs/blog/2025-04-24-release-v3.4.0.md
@@ -16,6 +16,8 @@ title: Kairos release v3.4.0
 </h1>
 
 
+
+
 # Kairos 3.4.0: Building Forward with Simplicity, Cloud Reach, and Runtime Flexibility
 
 Every now and then, a release isn't just a version bump—it’s a reset button. Kairos 3.4.0 is one of those releases.
@@ -23,6 +25,9 @@ Every now and then, a release isn't just a version bump—it’s a reset button.
 In the last few months, we’ve been heads-down rethinking what makes Kairos powerful, approachable, and future-proof. The result is a foundational overhaul: a brand-new build system, native images for all major cloud providers, streamlined customization through system extensions, and a tighter Kubernetes story with built-in support for k0s. This release isn’t just packed with features—it reflects where the project is heading and how our community is shaping that direction.
 
 Let’s walk through the biggest milestones in Kairos 3.4.0, how they work, and why they matter.
+
+<!--truncate-->
+
 
 ## 🛠️ Rebuilding Kairos from the Ground Up with `kairos-init`
 
