--- a/kairos-docs/blog/2025-07-25-release-v3.5.0.md
+++ b/kairos-docs/blog/2025-07-25-release-v3.5.0.md
@@ -15,9 +15,14 @@ title: Kairos release v3.5.0
 <br />
 </h1>
 
+
+
 # 🚀 Kairos 3.5.0: A Milestone for the Kairos Ecosystem
 
 We're excited to announce the release of Kairos 3.5.0! This release represents a significant milestone for the broader Kairos ecosystem, marking the completion of several key features across multiple projects that work together to improve the overall Kairos experience.
+
+<!--truncate-->
+
 
 ## ⚙️ Meet the Kairos Operator
 
