--- a/kairos-docs/blog/2024-07-19-release-v3.1.1.md
+++ b/kairos-docs/blog/2024-07-19-release-v3.1.1.md
@@ -15,7 +15,12 @@ title: Kairos release v3.1.1
 <br />
 </h1>
 
+
+
 We are thrilled to announce the release of Kairos v3.1.1! This patch release is a bugfix and security release.
+
+
+<!--truncate-->
 
 ## Key Features and Updates
 
