--- a/kairos-docs/blog/2024-08-13-hackweek-2024.md
+++ b/kairos-docs/blog/2024-08-13-hackweek-2024.md
@@ -8,11 +8,16 @@ tags:
 title: Our First Hackweek
 ---
 
+
+
 Last week was a special week. We had our first hackweek! With everyone in the team connecting from their own corners of the world, Belgium, Greece, Italy and Spain, we came together not in person, but through a shared passion for hacking. Unlike typical team-building events, this hackweek was all about individual exploration — each team member diving into their own projects, driven by personal curiosity and the opportunity to experiment.
 
 Over the course of the week, we set aside our usual tasks to focus entirely on these self-driven projects, tackling challenges we rarely have time to address or exploring new avenues. In this post, I’ll share a glimpse of some of the projects we worked on.
 
 During the first day we got together to brainstorm. Many good ideas came from each of us on what to work on. It lifts my spirit to see that our project while very stable, still has lots of avenues to explore and that everyone in our team is keen on making Kairos a better project.
+
+<!--truncate-->
+
 
 ## Kairos Kiosk & Quiz App by Dimitris
 
