fix blog fixes https://github.com/kairos-io/kairos/issues/3956

--- a/docusaurus/blog/2023-01-27-release-v1.5.md
+++ b/docusaurus/blog/2023-01-27-release-v1.5.md
@@ -2,7 +2,7 @@
 authors:
 - ettore-di-giacinto
 description: 'Introducing Kairos 1.5: A Smarter, More Secure Way to Manage Your Infrastructure'
-slug: release-v1.5
+slug: 2023/01/27/kairos-release-v1.5
 tags:
 - kairos
 title: Kairos release v1.5
