--- a/docusaurus/blog/2023-02-26-release-v1.6.md
+++ b/docusaurus/blog/2023-02-26-release-v1.6.md
@@ -2,7 +2,7 @@
 authors:
 - ettore-di-giacinto
 description: 'Introducing Kairos 1.6: Get ready to boot with AuroraBoot!'
-slug: release-v1.6
+slug: 2023/02/26/kairos-release-v1.6
 tags:
 - kairos
 title: Kairos release v1.6
@@ -42,7 +42,7 @@ With AuroraBoot, users can prepare multiple nodes in a lab before shipment or de
 
 You can see AuroraBoot in action here, with [a full e2e example](https://kairos.io/docs/examples/p2p_e2e/) on how to use it with p2p in Kairos, and in the video below:
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7Vym18wz9Uw" title="Kairos and libp2p" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+{{< youtube id="7Vym18wz9Uw" title="Kairos and libp2p" >}}
 
 ## Improvements to the WebUI for a simplified user experience
 
