--- a/docusaurus/blog/2023-04-13-release-v2.0.md
+++ b/docusaurus/blog/2023-04-13-release-v2.0.md
@@ -2,7 +2,7 @@
 authors:
 - ettore-di-giacinto
 description: 'Introducing Kairos 2.0: long live UKI!'
-slug: release-v2.0
+slug: 2023/04/13/kairos-release-v2.0
 tags:
 - kairos
 title: Kairos release v2.0
