--- a/docusaurus/blog/2023-06-15-release-v2.2.md
+++ b/docusaurus/blog/2023-06-15-release-v2.2.md
@@ -2,7 +2,7 @@
 authors:
 - ettore-di-giacinto
 description: 'Kairos 2.2 release: ARM enhancements'
-slug: release-v2.2
+slug: 2023/06/15/kairos-release-v2.2
 tags:
 - kairos
 title: Kairos release v2.2
