--- a/docusaurus/blog/2023-07-10-release-v2.3.md
+++ b/docusaurus/blog/2023-07-10-release-v2.3.md
@@ -2,7 +2,7 @@
 authors:
 - mauro-morales
 description: Unveiling Kairos v2.3 - FIPS Compliance and More!
-slug: release-v2.3
+slug: 2023/07/10/unveiling-kairos-v2.3-fips-compliance-and-more
 tags:
 - kairos
 title: Unveiling Kairos v2.3 - FIPS Compliance and More!
