--- a/docusaurus/blog/2023-09-19-release-v2.4.md
+++ b/docusaurus/blog/2023-09-19-release-v2.4.md
@@ -2,7 +2,7 @@
 authors:
 - dimitris-karakasilis
 description: Kairos release v2.4
-slug: release-v2.4
+slug: 2023/09/19/kairos-release-v2.4
 tags:
 - kairos
 title: Kairos release v2.4
