--- a/docusaurus/blog/2023-11-14-release-v2.4.2.md
+++ b/docusaurus/blog/2023-11-14-release-v2.4.2.md
@@ -2,7 +2,7 @@
 authors:
 - dimitris-karakasilis
 description: A patch release that looks bigger than it is
-slug: release-v2.4.2
+slug: 2023/11/14/kairos-release-v2.4.2
 tags:
 - kairos
 title: Kairos release v2.4.2
@@ -71,7 +71,7 @@ This allows one to change the base image above, to a derivative of `opensuse/lea
 ## Alma linux removal from artifacts
 
 We identified that Rocky linux and Alma linux were completely similar in regards to building steps. Given the resource and time constraints we have, we decided to no longer build and release Alma linux artifacts.
-The dockerfile for the [rhel family](https://github.com/kairos-io/kairos/blob/a658a3fa5f294b14377631dedfa0031d3551f2b2/img/Dockerfile.rhel#L1) supports the `almalinux` flavor.
+The dockerfile for the [rhel family](https://github.com/kairos-io/kairos/blob/a658a3fa5f294b14377631dedfa0031d3551f2b2/images/Dockerfile.rhel#L1) supports the `almalinux` flavor.
 Building an Alma linux Kairos image from the [Kairos repository](https://github.com/kairos-io/kairos/) root, is as simple as:
 
 ```
