--- a/docusaurus/blog/2024-01-11-release-v2.5.md
+++ b/docusaurus/blog/2024-01-11-release-v2.5.md
@@ -2,7 +2,7 @@
 authors:
 - mauro-morales
 description: Kairos release v2.5
-slug: release-v2.5
+slug: 2024/01/11/kairos-release-v2.5
 tags:
 - kairos
 title: Kairos release v2.5
