--- a/docusaurus/blog/2024-03-08-release-v3.md
+++ b/docusaurus/blog/2024-03-08-release-v3.md
@@ -2,7 +2,7 @@
 authors:
 - mauro-morales
 description: Kairos release v3
-slug: release-v3
+slug: 2024/03/08/kairos-release-v3
 tags:
 - kairos
 title: Kairos release v3
