--- a/docusaurus/blog/2024-08-13-hackweek-2024.md
+++ b/docusaurus/blog/2024-08-13-hackweek-2024.md
@@ -2,7 +2,7 @@
 authors:
 - mauro-morales
 description: Our First Hackweek
-slug: hackweek-2024
+slug: 2024/08/13/our-first-hackweek
 tags:
 - kairos
 title: Our First Hackweek
