--- a/docusaurus/blog/2025-07-25-release-v3.5.0.md
+++ b/docusaurus/blog/2025-07-25-release-v3.5.0.md
@@ -2,7 +2,7 @@
 authors:
 - kairos-team
 description: Kairos release v3.5.0
-slug: release-v3.5.0
+slug: 2025/07/25/kairos-release-v3.5.0
 tags:
 - kairos
 title: Kairos release v3.5.0
