--- a/docusaurus/blog/2024-07-11-release-v3.1.md
+++ b/docusaurus/blog/2024-07-11-release-v3.1.md
@@ -2,7 +2,7 @@
 authors:
 - mauro-morales
 description: Kairos release v3.1
-slug: release-v3.1
+slug: 2024/07/11/kairos-release-v3.1
 tags:
 - kairos
 title: Kairos release v3.1
