--- a/docusaurus/blog/2024-07-19-release-v3.1.1.md
+++ b/docusaurus/blog/2024-07-19-release-v3.1.1.md
@@ -2,7 +2,7 @@
 authors:
 - itxaka-serrano
 description: Kairos release v3.1.1
-slug: release-v3.1.1
+slug: 2024/07/19/kairos-release-v3.1.1
 tags:
 - kairos
 title: Kairos release v3.1.1
