--- a/docusaurus/blog/2025-04-24-release-v3.4.0.md
+++ b/docusaurus/blog/2025-04-24-release-v3.4.0.md
@@ -2,7 +2,7 @@
 authors:
 - itxaka-serrano
 description: Kairos release v3.4.0
-slug: release-v3.4.0
+slug: 2025/04/24/kairos-release-v3.4.0
 tags:
 - kairos
 title: Kairos release v3.4.0
