--- a/docusaurus/blog/2024-07-11-release-v3.1.md
+++ b/docusaurus/blog/2024-07-11-release-v3.1.md
@@ -44,7 +44,7 @@ We are thrilled to announce the release of Kairos v3.1.0! This update brings a h
 By default, UKI artifacts now exclude Linux modules and firmware to reduce file
 size for better EFI compatibility. This may impact hardware support. Review the
 full changelog on GitHub for details on how to customize these artifacts to
-meet specific hardware needs. Read more about this on the [release notes](/v3.1.0/docs/).
+meet specific hardware needs. Read more about this on the [release notes](https://kairos.io/v3.1.0/docs/).
 
 ## Full Changelog
 
